--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -6,6 +6,10 @@ body {
 
 a {
     color: #000;
+    a:link    {color:#000;}  /* unvisited link  */
+a:visited {color:#000;}  /* visited link    */
+a:hover   {color:#000;}  /* mouse over link */
+a:active  {color:#000;} 
 }
 
 
